[workspace]

resolver = "2"
members = [
	"builder",
	"errors",
	"list",
	"matrix",
	"ops",
	"orphan",
	"starter",
	"spinlock",
	"channel",
	"associated",
	"lifetimes",
  "constraint-graph",
  "problems",
	# ZK-SNARK
	"polynomial",
	"lagrange",
	"mle",
	"sumcheck",
  # Exercism
	"exercism/*", "chain-game",
]
