[workspace]

resolver = "2"
members = [
  # ZK-SNARK
  "polynomial",
  "lagrange",
  "mle",
  "sumcheck",
  # Other
  "builder",
  "errors",
  "list",
  "matrix",
  "ops",
  "orphan",
  "starter",
  "spinlock",
  "channel",
  "associated",
  "lifetimes",
  "constraint-graph",
  "problems",
  "chain-game",
  "mpsc",
  "smolchain",
  "smolchain-async",
  "kv",
  "exercism/*",
  "twr",
  "actor",
]
