[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "serial"
harness = false

[dependencies]
dashmap = { version = "6.1", features = ["serde"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing = "0.1"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"
temp_testdir = "0.2"
rand = "0.9"
