[package]
name = "smolchain-async"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
tracing = "0.1.41"
thiserror = "2.0"
eyre = "0.6.12"
blake3 = { version = "1.5.5", features = ["serde"] }
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
